# ML-AI-Algorithms-from-scratch

./: CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Bayesian Learning/: README.md
Bayesian Learning/Bayesian Networks/: BayesianNetwork.py  readme.md
Bayesian Learning/Bayesian Neural Networks/: BayesianNN.py
Bayesian Learning/BayesianInference/: BayesianInference.py  readme.md
Bayesian Learning/BayesianLinearRegression/: BayesianLinearRegression.py  readme.md
Bayesian Learning/Gibbs Sampling/: GibbsSampling.py  readme.md
Bayesian Learning/Metropolis Hastings Algorithm/: MetropolisHastings.py  readme.md
Bayesian Learning/Variational inference/: readme.md  variationalinference.py
Neural Networks/: MultiLayerPerceptronRegression.py  Readme.md
Neural Networks/Neural Network from Scratch/: neural net from scratch.ipynb  readme.md
Neural Networks/complex-valued neural networks/: README.md
Reinforcement/: README.md
Reinforcement/Deep Deterministic Policy Gradients/: DDPG.py  SimpleDDPG.py  readme.md
Reinforcement/Deep Q Network/: DQN.py  readme.md
Reinforcement/Proximal Policy Optimization/: SimplePPO.py  readme.md
Reinforcement/QLearning/: QLearning.py  readme.md
Reinforcement/SoftActorCritic/: SimpleSAC.py  readme.md
Supervised/: README.md
Supervised/DecisionTrees/: DecisionTreeClassification.py  DecisionTreeRegression.py  Readme.md  unitTestClassifier.py  unitTestRegressor.py
Supervised/KnearestNeighbour/: KNNClassifier.py  KNNRegressor.py  Readme.md
Supervised/LassoRegression/: LassoRegression.py  LassoRunitTest.py  readme.md
Supervised/LinearRegression/: LinearRegressionAlgo.py  Readme.md  unittestLR.py
Supervised/LogisticRegression/: LogisticRegressionAlgo.py  LogisticRegressionTitanicDataset.py  Readme.md  unitTestLogReg.py
Supervised/Naive Bayes/: NaiveBayesClassifier.py  readme.md
Supervised/RandomForest/: randomForestClassification.py  randomForestRegression.py  readme.md
Supervised/RidgeRegression/: RidgeRegression.py  readme.md
Supervised/SupportVectorMachines/: LinearSVMClassifier.py  Readme.md  SVMRegressor.py
Unsupervised/: README.md
Unsupervised/AprioriAlgorithm/: Apriori.py  readme.md
Unsupervised/Density-Based Spatial Clustering of Applications with Noise/: DBSCAN.py  Readme.md
Unsupervised/Expectation-Maximization/: ExpectationMaximization.py  readme.md
Unsupervised/Gaussian Mixture Model/: GaussianMixtureModel.py  readme.md
Unsupervised/HierarchicalClustering/: HierarchicalClustering.py  readme.md
Unsupervised/IndependentComponentAnalysis/: FastICA.py  FastICAwithStockDataset.py  Readme.md
Unsupervised/K-MedoidsClustering/: KMedoids.py  Readme.md
Unsupervised/KMeansPlusPlus/: KMeansPlusPlus.py  Readme.md
Unsupervised/PrincipalComponentAnalysis/: PrincipalComponentAnalysis.py  Readme.md  housing.csv
Unsupervised/SelfOrganizing Map/: SelfOrganizingMap.py  readme.md
Unsupervised/kmeanclustering/: KmeanWithDataset.py  ReadMe.md  kmeanAlgo.py  unitTest.py
Unsupervised/tSNE/: readme.md  tSNE.py
docs/: index.md  roadmap.md
src/mlscratch/: __init__.py  __main__.py
src/mlscratch/bayesian/: bayesian_linear_regression.py  bayesian_network.py  bayesian_nn.py  gaussian_process.py  hmm.py  init.py  kalman_filter.py  naive_bayes.py
src/mlscratch/reinforcement/: __init__.py  ddpg.py  dqn.py  ppo.py  q_learning.py  sac.py  utils.py
src/mlscratch/supervised/: __init__.py  decision_tree.py  knn.py  lasso_regression.py  linear_regression.py  logistic_regression.py  naive_bayes.py  random_forest.py  ridge_regression.py  svm.py
src/mlscratch/unsupervised/: __init__.py  apriori.py  dbscan.py  gmm.py  hierarchical_clustering.py  ica.py  kmeans.py  kmedoids.py  pca.py  tsne.py
tests/: conftest.py
tests/bayesian/: test_bayesian_linear_regression.py  test_bayesian_network.py  test_bayesian_nn.py  test_gaussian_process.py  test_hmm.py  test_kalman_filter.py  test_naive_bayes.py
tests/reinforcement/: test_ddpg.py  test_dqn.py  test_ppo.py  test_q_learning.py  test_sac.py  test_utils.py
tests/supervised/: test_decision_tree.py  test_knn.py  test_lasso_regression.py  test_linear_regression.py  test_logistic_regression.py  test_naive_bayes.py  test_random_forest.py  test_ridge_regression.py  test_svm.py
tests/unsupervised/: test_apriori.py  test_dbscan.py  test_gmm.py  test_hierarchical_clustering.py  test_ica.py  test_kmeans.py  test_kmedoids.py  test_pca.py  test_tsne.py
