[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlscratch"
version = "2.0.0"
description = "Educational from-scratch implementations of ML/AI/RL algorithms — NumPy only."
authors = [{name = "Min Htet Myet"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["machine-learning", "from-scratch", "numpy", "education", "algorithms", "reinforcement-learning", "bayesian"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.1", "scikit-learn>=1.3", "scipy>=1.11", "hypothesis>=6", "black>=23", "mypy>=1.8"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
bench = ["tabulate>=0.9"]
all = ["mlscratch[plot,dev,docs,bench]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "D"]
ignore = ["D203", "D213"]

[tool.coverage.run]
source = ["src/mlscratch"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if __name__ == .__main__.:"]
